# roma

./: .gitattributes  .gitignore  README.md  TODO.MD  opencode.json
rMetal/: Cargo.toml  STYLE_GUIDE.md  TODO.MD
rMetal/examples/: algorithm_comparison.rs  algorithm_comparison_with_observers.rs  experiment_demo.rs  experiment_hill_climbing_demo.rs  experiment_parallel_vs_sequential.rs  hc_vs_ga.rs  html_report_failure_demo.rs  internal_parallel_demo.rs  knapsack_example.rs  knapsack_ga_observer_demo.rs  knapsack_hc_demo.rs  knapsack_large_csv.rs  mono_objective_experiment.rs  observer_demo.rs  observer_hill_climbing_demo.rs  zdt1_nsga2_demo.rs
rMetal/src/: lib.rs
rMetal/test/: README.MD
rMetal/tests/: experiment_integration_test.rs  genetic_algorithm_integration_test.rs  hill_climbing_integration_test.rs  html_observer_uses_problem_presentation_test.rs  library_integration_test.rs  nsga2_integration_test.rs  observer_solution_presentation_integration_test.rs  problem_solution_format_defaults_test.rs  pso_integration_test.rs  simulated_annealing_integration_test.rs  tsp_integration_test.rs
roma/: Cargo.toml  README.md  TODO.MD
roma/examples/: ackley_de_benchmark.rs  bench_random.rs  experiment_hill_climbing_demo.rs  experiment_parallel_vs_sequential.rs  html_report_failure_demo.rs  internal_parallel_demo.rs  knapsack_ga_demo.rs  knapsack_hc_demo.rs  knapsack_pso_benchmark.rs  knapsack_sa_benchmark.rs  mono_objective_experiment.rs  qap_ga_benchmark.rs  rastrigin_hill_climbing_benchmark.rs  tsp_ga_benchmark.rs  zdt1_nsga2_benchmark.rs  zdt1_nsga2_demo.rs
roma/src/: lib.rs
roma/tests/: experiment_integration_test.rs  genetic_algorithm_integration_test.rs  hill_climbing_integration_test.rs  html_observer_uses_problem_presentation_test.rs  (+8 more)
(+330 files in other folders)
